DevTools: Page freezes when alert / confirm / prompt method is called from options dialog.

Bug: 825771
Change-Id: I98e174f29538fadd104c61706766b28ab0b9db7d
Reviewed-on: https://chromium-review.googlesource.com/994377
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548200}
Former-commit-id: 1c587bc5817351c713378fbef498a2cfb4536b67