content/browser/devtools/protocol/page_handler.h
@@ -78,8 +78,10 @@ class PageHandler : public DevToolsDomainHandler,
                               const base::string16& message,
                               const base::string16& default_prompt,
                               JavaScriptDialogType dialog_type,
+                              bool has_non_devtools_handlers,
                               JavaScriptDialogCallback callback);
   void DidRunBeforeUnloadConfirm(const GURL& url,
+                                 bool has_non_devtools_handlers,
                                  JavaScriptDialogCallback callback);
   void DidCloseJavaScriptDialog(bool success, const base::string16& user_input);
   void NavigationReset(NavigationRequest* navigation_request);
