third_party/WebKit/Source/devtools/front_end/sdk/ResourceTreeModel.js
@@ -878,9 +878,12 @@ SDK.PageDispatcher = class {
    * @param {string} url
    * @param {string} message
    * @param {string} dialogType
+   * @param {boolean} hasBrowserHandler
    * @param {string=} prompt
    */
-  javascriptDialogOpening(url, message, dialogType, prompt) {
+  javascriptDialogOpening(url, message, dialogType, hasBrowserHandler, prompt) {
+    if (!hasBrowserHandler)
+      this._resourceTreeModel._agent.handleJavaScriptDialog(false);
   }
 
   /**
