third_party/WebKit/Source/devtools/front_end/sdk/ScreenCaptureModel.js
@@ -174,9 +174,10 @@ SDK.ScreenCaptureModel = class extends SDK.SDKModel {
    * @param {string} url
    * @param {string} message
    * @param {string} dialogType
+   * @param {boolean} hasBrowserHandler
    * @param {string=} prompt
    */
-  javascriptDialogOpening(url, message, dialogType, prompt) {
+  javascriptDialogOpening(url, message, dialogType, hasBrowserHandler, prompt) {
   }
 
   /**
